# plant-monitor

./: .dockerignore  .env.example  .gitignore  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  config.example.toml  docker-compose.release.yml  docker-compose.yml  release-please-config.json
.github/: dependabot.yml
.github/workflows/: backend.yml  ci.yml  commit-scope.yml  firmware.yml  frontend.yml  image.yml  publish.yml  release.yml
backend/: .dockerignore  .gitignore  Dockerfile  IngestWorker.cs  PlantMonitor.Backend.csproj  PlantMonitor.Backend.slnx  Program.cs  README.md  appsettings.json
backend/PlantMonitor.Backend/: Api.cs  AppDbContext.cs  AppVersion.cs  DependencyInjection.cs  IngestWorker.cs  Plant.cs  PlantMonitor.Backend.csproj  Program.cs  Reading.cs  Schema.cs  appsettings.json
backend/PlantMonitor.Backend.Tests/: ApiIntegrationTests.cs  ControllerTests.cs  IngestIntegrationTests.cs  PlantMonitor.Backend.Tests.csproj  ReadingTests.cs  RepositoryTests.cs  ServiceTests.cs
backend/PlantMonitor.Backend/Controllers/: PlantsController.cs  ReadingsController.cs  SensorsController.cs  SpeciesController.cs  VersionController.cs
backend/PlantMonitor.Backend/Dtos/: Dtos.cs
backend/PlantMonitor.Backend/Migrations/: 20260613155944_InitialReadings.Designer.cs  20260613155944_InitialReadings.cs  20260613160833_AddPlants.Designer.cs  20260613160833_AddPlants.cs  20260614154917_AddWateringLimits.Designer.cs  20260614154917_AddWateringLimits.cs  AppDbContextModelSnapshot.cs
backend/PlantMonitor.Backend/Properties/: launchSettings.json
backend/PlantMonitor.Backend/Repositories/: PlantRepository.cs  ReadingRepository.cs  SpeciesRepository.cs
backend/PlantMonitor.Backend/Services/: PlantService.cs  ReadingService.cs  SensorService.cs  SpeciesService.cs
deploy/: .env.example  README.md  compose.yml  plant-monitor.service  plant-monitor.timer
docs/: ota.md  releasing.md  sample-data.md
firmware/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  config.example.toml  partitions.csv  provision.sh  rust-toolchain.toml
firmware/.cargo/: config.toml
firmware/src/: config.rs  lib.rs  mqtt.rs
frontend/: README.md  angular.json  ngsw-config.json  package-lock.json  package.json
frontend/public/: manifest.webmanifest
frontend/src/: index.html  styles.css
frontend/src/app/: app.config.ts  app.html  app.routes.ts  app.spec.ts  app.ts  format.ts  moisture.spec.ts  moisture.ts  plant-api.spec.ts  plant-api.ts  plant.ts  reading.ts  refresh.spec.ts  refresh.ts  sensor.ts  species.ts  version.ts
frontend/src/app/error-state/: error-state.ts
frontend/src/app/loading/: loading.ts
frontend/src/app/moisture-chart/: moisture-chart.spec.ts  moisture-chart.ts
frontend/src/app/moisture-gauge/: moisture-gauge.html  moisture-gauge.ts
frontend/src/app/plant-detail-page/: plant-detail-page.html  plant-detail-page.spec.ts  plant-detail-page.ts
frontend/src/app/plant-form-page/: plant-form-page.html  plant-form-page.spec.ts  plant-form-page.ts
frontend/src/app/plants-page/: plants-page.html  plants-page.spec.ts  plants-page.ts
frontend/src/app/pull-to-refresh/: pull-to-refresh.ts
frontend/src/app/readings-page/: readings-page.html  readings-page.spec.ts  readings-page.ts
frontend/src/app/readings-section/: readings-section.html  readings-section.ts
frontend/src/app/sensor-detail-page/: sensor-detail-page.html  sensor-detail-page.spec.ts  sensor-detail-page.ts
frontend/src/app/sensors-page/: sensors-page.html  sensors-page.spec.ts  sensors-page.ts
frontend/src/app/status-dot/: status-dot.ts
frontend/src/app/unassigned-sensors-page/: unassigned-sensors-page.html  unassigned-sensors-page.spec.ts  unassigned-sensors-page.ts
mosquitto/: mosquitto.conf
src/: config.rs  lib.rs  mqtt.rs  sensor.rs
