[package]
edition      = "2024"
name         = "plant-monitor-firmware"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "plant-monitor-firmware"
path = "./src/bin/main.rs"

[features]
default = []
# WiFi + MQTT publishing. Off by default: build with `--features net`.
net = ["dep:esp-radio", "dep:esp-rtos", "dep:blocking-network-stack", "dep:smoltcp"]

# Platform-independent deps (used by the lib, must build on the host so
# `cargo test --lib --target <host>` works).
[dependencies]
heapless = "=0.9.3"
embedded-io = { version = "=0.6.1", default-features = false }

# Hardware deps — only build for the chip target.
[target.riscv32imc-unknown-none-elf.dependencies]
esp-hal = { version = "=1.0.0", features = ["esp32c3", "unstable"] }

# Raw PAC (same version esp-hal uses): needed for RTC_CNTL pad-hold registers
# that esp-hal doesn't expose for GPIO6+ on the C3.
esp32c3 = "=0.31.0"

esp-bootloader-esp-idf = { version = "=0.4.0", features = ["esp32c3"] }

esp-hal-smartled = { version = "=0.17.0", features = ["esp32c3"] }
smart-leds = "=0.4.0"

ssd1306 = "=0.10.0"
embedded-graphics = "=0.8.2"
embedded-hal-bus = "=0.3.0"
nb = "=1.1.0"

critical-section = "=1.2.0"

# WiFi + MQTT. esp-radio 0.17 / esp-rtos 0.2 / esp-alloc 0.9 are the releases
# compatible with esp-hal 1.0 (esp-radio 0.18+ requires esp-hal 1.1).
esp-radio = { version = "=0.17.0", features = ["esp32c3", "wifi", "smoltcp", "unstable"], optional = true }
esp-rtos = { version = "=0.2.0", features = ["esp32c3", "esp-radio"], optional = true }
esp-alloc = "=0.9.0"
blocking-network-stack = { git = "https://github.com/bjoernQ/blocking-network-stack.git", rev = "b3ecefc", optional = true }
smoltcp = { version = "=0.12.0", default-features = false, optional = true, features = [
  "medium-ethernet",
  "proto-ipv4",
  "proto-dhcpv4",
  "socket-dhcpv4",
  "socket-tcp",
  "socket-raw",
] }


# Local patch: adds Socket::open_with_timeout so an unreachable broker can't
# hang the device forever (upstream open() spins until ESTABLISHED), and
# Socket::send_queue so the publish path can wait for the broker's ACK before
# tearing down. Verbatim copy of rev b3ecefc plus those two methods — see
# vendor/blocking-network-stack.
[patch."https://github.com/bjoernQ/blocking-network-stack.git"]
blocking-network-stack = { path = "vendor/blocking-network-stack" }


# For fine tuning these settings, please refer to https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
# The default debug profile is too slow and too big for resource-constrained devices.
# Always build with some optimizations enabled.
opt-level = "s"

[profile.release]
codegen-units = 1     # LLVM can perform better optimizations using a single thread
debug         = 2     # prefer slower builds but better debugging experience
lto           = 'fat'
opt-level     = 's'
